<resources>
    <string name="app_name">Practica_productos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="texto_detalles">Detalles</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_talla">Talla</string>
    <string name="texto_color">Color</string>
    <string name="texto_precio">Precio</string>
    <string name="texto_ingrese_nombre">Ingrese Nombre</string>
    <string name="texto_ingrese_color">Ingrese Color</string>
    <string name="texto_ingrese_talla">Ingrese Talla</string>
    <string name="texto_ingrese_precio">Ingrese Precio</string>
    <string name="subir_datos">Subir datos</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ver_productos">Ver Productos</string>
    <string name="registrar_productos">Registrar Productos</string>
</resources>